{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 417,
  "lineage": "8e2cea54-e640-b22b-e9ca-dbff73afe616",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb509f11939c4d85",
            "arn": "arn:aws:ec2:sa-east-1:374120343751:instance/i-06b49bf12d1adeb9c",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b49bf12d1adeb9c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-key-admin-sp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d26f3db935d3f2af",
            "private_dns": "ip-192-168-4-236.sa-east-1.compute.internal",
            "private_ip": "192.168.4.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 105,
                "throughput": 0,
                "volume_id": "vol-01cb8a550faaa4c69",
                "volume_size": 35,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d38f83bf414e80a3",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04497139c6c4f56aa"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:internet-gateway/igw-07822ebe70c503ed3",
            "id": "igw-07822ebe70c503ed3",
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:loadbalancer/app/Terraform-ALB/7b6ddbfa1e180ca1",
            "arn_suffix": "app/Terraform-ALB/7b6ddbfa1e180ca1",
            "dns_name": "Terraform-ALB-1149820454.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:loadbalancer/app/Terraform-ALB/7b6ddbfa1e180ca1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "security_groups": [
              "sg-0a36f2a3504284178"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4b35426abbff83e"
              },
              {
                "subnet_id": "subnet-0f3270e1eadcc06a7"
              }
            ],
            "subnets": [
              "subnet-0a4b35426abbff83e",
              "subnet-0f3270e1eadcc06a7"
            ],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:listener/app/Terraform-ALB/7b6ddbfa1e180ca1/c823cec8084c9fe8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:targetgroup/ALB-TG/426dea89926d99a6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:listener/app/Terraform-ALB/7b6ddbfa1e180ca1/c823cec8084c9fe8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:loadbalancer/app/Terraform-ALB/7b6ddbfa1e180ca1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:targetgroup/ALB-TG/426dea89926d99a6",
            "arn_suffix": "targetgroup/ALB-TG/426dea89926d99a6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:374120343751:targetgroup/ALB-TG/426dea89926d99a6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0973a1996d5b18e9d",
            "owner_id": "374120343751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb1e73571c6f5e59",
            "owner_id": "374120343751",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07822ebe70c503ed3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0add7aabdf13596dc",
            "route_table_id": "rtb-0973a1996d5b18e9d",
            "subnet_id": "subnet-0c4381be59caa3913"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067fe3c487f655376",
            "route_table_id": "rtb-0973a1996d5b18e9d",
            "subnet_id": "subnet-0d38f83bf414e80a3"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2aab9624ab9b08",
            "route_table_id": "rtb-0eb1e73571c6f5e59",
            "subnet_id": "subnet-0a4b35426abbff83e"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db2df163fd23ad9",
            "route_table_id": "rtb-0eb1e73571c6f5e59",
            "subnet_id": "subnet-0f3270e1eadcc06a7"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:security-group/sg-0a36f2a3504284178",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a36f2a3504284178",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "374120343751",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:security-group/sg-0d7a13943b8024674",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7a13943b8024674",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a36f2a3504284178"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "374120343751",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:security-group/sg-0d276a267c815d444",
            "description": "Allow incoming database connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d276a267c815d444",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eea951213866ab55"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB",
            "name_prefix": "",
            "owner_id": "374120343751",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Database MySQL",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:security-group/sg-04497139c6c4f56aa",
            "description": "Allow incoming connections to Jenkins machine",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eea951213866ab55"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-04497139c6c4f56aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins",
            "name_prefix": "",
            "owner_id": "374120343751",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:security-group/sg-0eea951213866ab55",
            "description": "Allow public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0eea951213866ab55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "374120343751",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:subnet/subnet-0a4b35426abbff83e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0a4b35426abbff83e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:subnet/subnet-0f3270e1eadcc06a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0f3270e1eadcc06a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:subnet/subnet-0c4381be59caa3913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0c4381be59caa3913",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:subnet/subnet-0d38f83bf414e80a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0d38f83bf414e80a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-009bd95c7896b8e37"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:374120343751:vpc/vpc-009bd95c7896b8e37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-073c33b1bc585a752",
            "default_route_table_id": "rtb-03253d0f2b81f3bb6",
            "default_security_group_id": "sg-03026d082fdb5c8c0",
            "dhcp_options_id": "dopt-d26ec6b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-009bd95c7896b8e37",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03253d0f2b81f3bb6",
            "owner_id": "374120343751",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Silas Marcos",
              "Project": "Iac com Terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}